[gd_scene load_steps=5 format=3 uid="uid://c8est8qh3g3tb"]

[ext_resource type="Texture2D" uid="uid://dtmsiuqoht74n" path="res://assets/UI/Options/ControllerTopBase.png" id="1_61gyg"]
[ext_resource type="Script" uid="uid://ckeh62yx0nbbg" path="res://src/UI/Options/ControllerTop.gd" id="2_x4h6g"]
[ext_resource type="Texture2D" uid="uid://krsx756lvkat" path="res://assets/UI/Options/ControllerTrigger.png" id="3_5occd"]
[ext_resource type="Texture2D" uid="uid://dhd6sn33su77h" path="res://assets/UI/Options/ControllerBumper.png" id="4_xiov6"]

[node name="ControllerTop" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -240.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_61gyg")
stretch_mode = 2
script = ExtResource("2_x4h6g")

[node name="TriggerLeft" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(50, 16)
texture = ExtResource("3_5occd")
centered = false
hframes = 2

[node name="TriggerRight" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(178, 16)
texture = ExtResource("3_5occd")
centered = false
hframes = 2

[node name="BumperLeft" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(44, 58)
texture = ExtResource("4_xiov6")
centered = false
hframes = 2

[node name="BumperRight" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(172, 58)
texture = ExtResource("4_xiov6")
centered = false
hframes = 2
